--- a/ChainBlock/stylesheet.css
+++ b/ChainBlock/stylesheet.css
@@ -1,43 +1,13 @@
-body {
-	text-align: center;
-	padding: .5em;
-	color: black;
-	
- }
-
- a {
-	text-decoration: none;
-	color: black;
- }
-
-h1 {
-	font-size: 15px;
-	text-align: center;
-   }
-
-.box {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
 button {
-	margin: auto;
-	padding: 10px;
-	outline: none;
-	margin: 5px;
-	border: none;
-	border-radius: 2px;
-	width: 100%;
+  height: 30px;
+  width: 30px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 2px;
 }
 
 button.current {
-	box-shadow: 0 0 0 2px white,
-		0 0 0 4px black;
-}
-
-button:hover {
-	box-shadow: 0 0 0 2px white,
-	0 0 0 4px black;
+  box-shadow: 0 0 0 2px white,
+              0 0 0 4px black;
 }
